🍀본문 highlight 🍀main 페이지에 link

--- a/src/content/biology/02. The Chemical Context of Life.md
+++ b/src/content/biology/02. The Chemical Context of Life.md
@@ -1,7 +1,7 @@
 ---
 sticker: emoji//269b-fe0f
 title: 02. The Chemical Context of Life
-slug: biology-02
+slug: biology/02
 pubDate: "2025-01-21"
 ---
 
@@ -33,7 +33,7 @@ pubDate: "2025-01-21"
   atomic mass가 정확한 질량임.
 
 * **==radioactive isotope==**: 자발적으로 붕괴하는 isotope
-  - (예1) $^{14}C$의 중성자가 양성자로 붕괴하며 $^{14}N$이 된다.
+  - (예1) $^{14}C$ 의 중성자가 양성자로 붕괴하며 $^{14}N$이 된다.
   1.  (<mark style="background: #ADCCFFA6;">radioactive tracers</mark>) 활성화된 cell과 결합해서 **tracer로 작용**하는 식으로 이용된다.
       - (예2) radioactive isotope을 소량 주사한 후 오줌에서 방출되는 양을 검출해 kidney disorder를 발견할 수 있다.
       - (예3) PET(positron-emission tomography)는 radioactively labeled glucose를 감지한다._(암 가능성이 있는 조직.)_
@@ -61,7 +61,7 @@ pubDate: "2025-01-21"
   - **hydrogen bond** (delta에 따른 극성 이끌림이지, 공유 결합이 아님.)
   - **van der Waals interactions** (무극성 공유 결합 물질 사이의 미약한 delta)
 
-- ==**hybrid orbital**==이 **tetrahedron** 정사면체를 형성
+- **==hybrid orbital==** 이 **tetrahedron** 정사면체를 형성
 
   - 4개의 hybrid orbital 중 2개는 수소와 공유, 2개는 lone pairs of electrons로 채워짐.
   - ![[Pasted image 20250120215213.png|200]]
