✨카테고리 구현현

--- a/src/content/biology/03. Water and Life.md
+++ b/src/content/biology/03. Water and Life.md
@@ -14,7 +14,7 @@ pubDate: "2025-01-21"
 # concept 3.2. Four emergent properties of water contribute to Earth’s suitability for life
 
 1. <mark style="background: #BBFABBA6;">cohesive behavior</mark>
-   - 수소 결합으로 인해 응집력을 가지는데, 이 현상을 ==**cohesion**==이라 한다.
+   - 수소 결합으로 인해 응집력을 가지는데, 이 현상을 **==cohesion==** 이라 한다.
      표면 장력 surface tension도 cohesion의 결과임.
      **==표면 장력==**: 표면의 물 분자가 아래층 물 분자와 수소 결합을 유지하는 동안 공기와는 그렇지 않기 때문에 생기는 합력
      (예시) 증산 작용으로 물이 빠져나가면, 비교적 아래에 있는 물이 위로 힘을 받는다.
@@ -41,7 +41,7 @@ pubDate: "2025-01-21"
    - 그 결과 얼음이 물에 뜨고, 따라서 물이 쉽게 얼지 않게 된다.
 4. <mark style="background: #BBFABBA6;">versatility as a solvent</mark>
    - **solution: homogeneous mixture of substances** = solvent + solute
-   - charged matter이 물에 들어오면 물의 polarity로 인해 물 분자가 charged matter를 둘러싼다. 이를 ==**hydration shell**==이라 한다.
+   - charged matter이 물에 들어오면 물의 polarity로 인해 물 분자가 charged matter를 둘러싼다. 이를 **==hydration shell==** 이라 한다.
      (이 때, charged matter가 ionic matter일 필요는 없음.)
 
 # concept 3.3. Acidic and basic conditions affect living organisms
@@ -51,7 +51,7 @@ pubDate: "2025-01-21"
 - 반응이 reactant-favored인지 product-favored인지 모르기때문에 반응식만으로 구분하면 안 된다.
   (예시) ![[Pasted image 20250121012921.png|500]]
   해당 반응 결과 거의 중성이다. (약산)
-- ==**buffer**==: pH의 변화를 줄이는 물질
+- **==buffer==**: pH의 변화를 줄이는 물질
   - 약산 = 강염기인데, 만약 이 물질이 있는 용액에 강산이 들어오면, 강염기와 중화되어 pH의 변화는 크지 않다.
   - ![[Pasted image 20250121013325.png|500]]
 
